# scikit-misc

./: .buildinfo  .cirrus.star  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.rst  api.html  changelog.html  codecov.yml  genindex.html  how-to-release.rst  index.html  installation.html  loess.html  meson.build  meson_options.txt  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  versioneer.py
.devpy/: cmds.py
.github/utils/: _repo.py  can_i.py  check_package_version.py  deepen-shallow-repo.py  get_wheels_action.py  please.py
.github/workflows/: build-wheels.yml  testing.yml
.spin/: cmds.py
_modules/: index.html
_sources/: installation.txt
_static/bootstrap-3.3.6/css/: bootstrap.min.css
ci/: cirrus_wheels.yml
dev/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  loess.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_sources/: api.rst.txt  installation.rst.txt
dev/_static/: documentation_options.js
doc/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  loess.rst
doc/_static/: custom.css
doc/_templates/: cython_class.rst
doc/theme/static/bootstrap-3.4.1/css/: bootstrap.min.css
examples/: loess-basic-usage.ipynb  requirements-examples.txt
onelib/: _version.py  onelib.py  setup.py
onelib/loess/: README  __init__.py  examples.py  loess.py  setup.py
onelib/loess/src/: _loess.pyx  c_loess.pxd  cloess.h  loess.c  loess.h  loessc.c  misc.c  predict.c
onelib/loess/tests/: __init__.py  test_loess.py
onelib/pyloess/src/: _mloess.pyx  misc.c
onelib/pyloess/tests/: test_mpyloess.py  test_pyloess.py
onelib/tests/: test_onelib.py
requirements/: build.txt  ci_requirements.txt  dev.txt
skmisc/: __config__.py.in  __init__.py  _distributor_init.py  _version.py  _version.py.in  meson.build  setup.py
skmisc/_build_utils/: copy_version_to_dist.py  gcc_build_bitness.py  version.py  version_please.py
skmisc/loess/: __init__.py  meson.build  setup.py
skmisc/loess/src/: S.h  _loess.pyx  blas_lite.f  c_loess.pxd  loess.c  loess.h  loessc.c  loessf.f  misc.c  predict.c
skmisc/loess/tests/: meson.build  test_loess.py
tools/: cythonize.py  deepen-shallow-repo.py  deploy_documentation.sh  deploy_key.enc  download_wheels.sh  openblas_support.py  release.sh
tools/github/: _repo.py  can_release.py  deepen-shallow-repo.py  get_wheels_action.py
tools/wheels/: LICENSE_linux.txt  LICENSE_osx.txt  LICENSE_win32.txt  check_license.py  cibw_before_build.sh  cibw_before_build_linux.sh  cibw_before_build_macos.sh  cibw_before_build_win.sh  cibw_test_command.sh  gfortran_utils.sh  howto.txt  repair_windows.sh
v0.1.3/: api.html  genindex.html  index.html  installation.html  search.html  searchindex.js
v0.1.3/_modules/: index.html
v0.1.3/_sources/: index.rst.txt  loess.rst.txt
v0.1.4/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  loess.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.4/_modules/: index.html
v0.1.4/_sources/: changelog.rst.txt
v0.2.0/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  loess.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.0/_modules/: index.html
v0.2.0/_static/bootstrap-3.4.1/css/: bootstrap.min.css
v0.3.1/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  loess.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.1/_modules/: index.html
v0.3.1/_sources/: changelog.rst.txt
