option('blas', type: 'string', value: 'openblas',
        description: 'option for BLAS library switching')
option('lapack', type: 'string', value: 'openblas',
        description: 'option for LAPACK library switching')
option('blas-symbol-suffix', type: 'string', value: 'auto',
        description: 'BLAS and LAPACK symbol suffix to use, if any')
option('use-ilp64', type: 'boolean', value: false,
       description: 'Use ILP64 (64-bit integer) BLAS and LAPACK interfaces')
option('use-g77-abi', type: 'boolean', value: false,
        description: 'If set to true, forces using g77 compatibility wrappers ' +
                     'for LAPACK functions. The default is to use gfortran ' +
                     'ABI for all LAPACK libraries except MKL.')

# We do not use this option
option('allow-noblas', type: 'boolean', value: false,
        description: 'If set to true, allow building with (slow!) internal fallback routines')
